testing/tests/ui/space-pipe.stderr
error: the previous template error derives from
  --> tests/ui/space-pipe.rs:10:25
   |
10 | #[template(ext = "txt", source = "{{a |lower}}")]
   |                         ^^^^^^

error: the previous template error derives from
  --> tests/ui/space-pipe.rs:22:25
   |
22 | #[template(ext = "txt", source = "{{a | lower}}")]
   |                         ^^^^^^
